--- a/TicketManagementSystem/TicketManagementSystem.csproj
+++ b/TicketManagementSystem/TicketManagementSystem.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TicketManagementSystem.Models\TicketManagementSystem.Models.csproj" />
+	<FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
 </Project>
